<resources>
    <string name="app_name">Cold Popcorn</string>
    <string name="popular">Popular</string>
    <string name="most_popular">Most popular movies</string>
    <string name="error_fetch_movies">Please check your internet connection</string>
    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest rated movies of all time</string>
    <string name="upcoming">Upcoming</string>
    <string name="stay_updated">Stay updated with the latest movies</string>
    <string name="search">Search</string>
    <string name="search_result">Search Result for: </string>
    <string name="share">Share</string>
    <string name="watch_movie_trailer">Watch Movie Trailer</string>
    <string name="facebook_application_id">5161033180677768</string>
    <string name="facebook_login_protocol_scheme">fb5161033180677768</string>
</resources>